Add background music, adjust game position in js to get it to fit in the page properly

--- a/style/main.css
+++ b/style/main.css
@@ -1,49 +1,14 @@
-* {
-    box-sizing: border-box;
-}
-
 html, body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background: #444;
-}
-
-#frame {
-    position: relative;
-    width: 100%;
-    max-width: 800px;
-    border-radius: 100%;
-    overflow: hidden;
-}
-
-#frame:before {
-    content: '';
-    display: block;
-    padding-top: 100%;
-}
-
-#screen {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
 }
 
 #canvas {
     display: block;
     touch-action: none;
     user-select: none;
+    border-radius: 1000px;
     width: 100%;
     height: 100%;
 }
