--- a/style/main.css
+++ b/style/main.css
@@ -6,6 +6,9 @@ html, body {
 }
 
 body {
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
     user-select: none;
 }
 
@@ -16,5 +19,9 @@ body {
     border-radius: 1000px;
     width: 100%;
     height: 100%;
+
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
     user-select: none;
 }
