--- a/style/main.css
+++ b/style/main.css
@@ -5,11 +5,12 @@ html, body {
     overflow: hidden;
 }
 
-body {
-    -ms-user-select: none;
-    -moz-user-select: none;
+body, canvas {
     -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 #canvas {
@@ -19,9 +20,4 @@ body {
     border-radius: 1000px;
     width: 100%;
     height: 100%;
-
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
 }
